apps/cozytemp/cozytemp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cozytemp-server
  labels:
    app: cozytemp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cozytemp-server
  template:
    metadata:
      labels:
        app: cozytemp-server
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: cozytemp-server
          image: ghcr.io/tryy3/cozytemp_flutter_serverpod/flutter-server:1.3.2
          ports:
            - name: api
              containerPort: 8080
              protocol: TCP
            - name: insights
              containerPort: 8081
              protocol: TCP
            - name: web
              containerPort: 8082
              protocol: TCP
          args:
            - "--mode"
            - "production"
            - "--server-id"
            - "default"
            - "--logging"
            - "normal"
            - "--role"
            - "monolith"
            - "--apply-migrations"
          
          startupProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
